전체적인 기본 구조 작성 - VM 정보 수집 기능 추가 - Dashboard API 기본 형태 작성 - 노드간 API 를 사용한 통신 방법 마련
